--- a/projects/movie-project.html
+++ b/projects/movie-project.html
@@ -55,7 +55,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/untold-flower-girl.png" class="img-fluid project-img">
+            <img src="../img/Untold-Flower-Girl.png" class="img-fluid project-img">
 
 
             <div class="row">
