--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
         <div class="container">
             <div class="row">
 
-                <!--
-                <div class="col-sm-4">
+               <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Project Name</h5>
+                            <h5 class="card-title">The Untold Flower Girl</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
-                            <p class="card-text">A brief explanation of the project.</p>
-                            <a href="#" class="card-link">More</a>
+                            <p class="card-text">I learned how to make my own cool logo and communicating with my parther or else it will go north.</p>
+                            <a href="projects/movie-project.hmtl" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
-                -->
+            
+                
 
             </div>
         </div>
