--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <h5 class="card-title">The Untold Flower Girl</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">I learned how to make my own cool logo and communicating with my parther or else it will go north.</p>
-                            <a href="projects/movie-project.hmtl" class="card-link">More</a>
+                            <a href="projects/movie-project.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
