--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                         </div>
                     </div>
                 </div>
-
+                
+            </div>
+        </div>
+        </a>
+    </div>
 
                  <div class="col-sm-4">
                     <div class="card">
