--- a/index.html
+++ b/index.html
@@ -63,11 +63,7 @@
                         </div>
                     </div>
                 </div>
-                
-            </div>
-        </div>
-        </a>
-    </div>
+          
 
                  <div class="col-sm-4">
                     <div class="card">
@@ -75,7 +71,7 @@
                             <h5 class="card-title">CYOA!!</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">I learned how to make links.</p>
-                            <a href="projects/movie-project.html" class="card-link">More</a>
+                            <a href="projects/cyoa.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
