--- a/projects/sep-10-fp.html
+++ b/projects/sep-10-fp.html
@@ -44,10 +44,10 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
+            <h1 class="margin text-center">Cooking Gadgets</h1>
+            <p>This project was about what I started from the start and of what I have learned and used the whole year to help me, as well of software and hardware of cooking gadgets.</p>
             <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <a href="#">https://caronv3030.github.io/sep10-freedom-project/#!</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
