--- a/projects/sep-10-fp.html
+++ b/projects/sep-10-fp.html
@@ -47,7 +47,7 @@
             <h1 class="margin text-center">Cooking Gadgets</h1>
             <p>This project was about what I started from the start and of what I have learned and used the whole year to help me, as well of software and hardware of cooking gadgets.</p>
             <p>My friend also have helped me when I was in a middle of problem and they helped me since day 1.</p>
-            <a href="#">https://caronv3030.github.io/sep10-freedom-project/#!</a><br>
+            <a href="https://caronv3030.github.io/sep10-freedom-project/#!">My Cooking Gadget Website</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
