--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
                         </div>
                     </div>
                 </div>
-                
+
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">My Cooking Gagdet Webiste</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
+                            <p class="card-text">I learned how to make a webiste with my software and hardware knowledge of cooking gagdets</p>
+                            <a href="projects/sep-10-fp.html" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
