--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
     <div class="container-fluid bg-3 text-center">
         <h3 class="margin">About Me</h3><br>
         <div class="row">
-            <div class="col-sm-4">
-                <p>Logo.</p>
+         <div class="container-fluid bg-1 text-center">
+        <img src="https://files.logomakr.com/7HdQJC-LogoMakr.png" class="img-fluid" alt="Logo" id="logo">
+    </div>
             </div>
             <div class="col-sm-4">
                 <p>Lorem ipsum.</p>
