--- a/projects/garden-project.html
+++ b/projects/garden-project.html
@@ -53,8 +53,7 @@
 
             <p>I had learned alot from my tool and there was so much challenges but we faced them all. We worked hard to make what we started and we all finished it at the end.</p>
 
-            <a href="https://kiaram2249.github.io/Garden-freedom-project/mainmenu.html">Preview of the Project</a>
-
+            <a href="https://kiaram2249.github.io/Garden-freedom-project/mainmenu.html">Preview of the Project</a> <br>
             
             <a href="https://github.com/kiaram2249/Garden-freedom-project"> Link of the project</a><br>
 
