--- a/projects/garden-project.html
+++ b/projects/garden-project.html
@@ -18,6 +18,13 @@
 <body>
 
     <!-- Navbar -->
+<style>
+
+    p {
+  color: black;
+}
+
+</style>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand owner-name" href="#"></a>
@@ -45,17 +52,17 @@
         <div class="container">
 
             <h1 class="margin text-center">Garden Project</h1>
-            <p> This is my Freedom Project that I had started ever since the beginning of the school year. I had used my tool, Kaboom and have always errors and challenges that I had to face. </p>
+            <p class="black"> This is my Freedom Project that I had started ever since the beginning of the school year. I had used my tool, Kaboom and have always errors and challenges that I had to face. </p>
 
-            <p>This project was designed from me, Kiara, and Robert. We all combined what we liked and formed it into one single idea! Which turned out we wanted to do something with plants and can be turned into gardening because there are fruits and we connected with bugs because there are always bugs in the trees of where the fruit is!</p>
+            <p class="black">This project was designed from me, Kiara, and Robert. We all combined what we liked and formed it into one single idea! Which turned out we wanted to do something with plants and can be turned into gardening because there are fruits and we connected with bugs because there are always bugs in the trees of where the fruit is!</p>
 
-            <p>There were many challenges due to me and Kiara had 2 different tools which had made a huge struggle for us for communication and collbartion together. And Robert's tool sadly didn't work and it was a huge struggle but we still found a solution. Robert then soon to found that his tool didn't work well and we had to find what he can do for him to still mange to be apart of the project and not left out. He was a tester for the errors for me because on my laptop, it doesnt show me anything but when the code was tested for Robert, it worked and he fixed the minor errors. He also had helped Kiara with her tool to see what else was needed for our project like the background, the images, and many other more. </p>
+            <p class="black">There were many challenges due to me and Kiara had 2 different tools which had made a huge struggle for us for communication and collbartion together. And Robert's tool sadly didn't work and it was a huge struggle but we still found a solution. Robert then soon to found that his tool didn't work well and we had to find what he can do for him to still mange to be apart of the project and not left out. He was a tester for the errors for me because on my laptop, it doesnt show me anything but when the code was tested for Robert, it worked and he fixed the minor errors. He also had helped Kiara with her tool to see what else was needed for our project like the background, the images, and many other more. </p>
 
-            <p>I had learned alot from my tool and there was so much challenges but we faced them all. We worked hard to make what we started and we all finished it at the end.</p>
+            <p class="black">I had learned alot from my tool and there was so much challenges but we faced them all. We worked hard to make what we started and we all finished it at the end.</p>
 
             <a href="https://kiaram2249.github.io/Garden-freedom-project/mainmenu.html">Preview of the Project</a>
 
-            
+
             <a href="https://github.com/kiaram2249/Garden-freedom-project"> Link of the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
