--- a/projects/garden-project.html
+++ b/projects/garden-project.html
@@ -24,6 +24,10 @@
   color: black;
 }
 
+h1{
+    color: black;
+}
+
 </style>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -51,7 +55,7 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Garden Project</h1>
+            <h1 class="black">Garden Project</h1>
             <p class="black"> This is my Freedom Project that I had started ever since the beginning of the school year. I had used my tool, Kaboom and have always errors and challenges that I had to face. </p>
 
             <p class="black">This project was designed from me, Kiara, and Robert. We all combined what we liked and formed it into one single idea! Which turned out we wanted to do something with plants and can be turned into gardening because there are fruits and we connected with bugs because there are always bugs in the trees of where the fruit is!</p>
@@ -60,14 +64,8 @@
 
             <p class="black">I had learned alot from my tool and there was so much challenges but we faced them all. We worked hard to make what we started and we all finished it at the end.</p>
 
-<<<<<<< HEAD
-            <a href="https://kiaram2249.github.io/Garden-freedom-project/mainmenu.html">Preview of the Project</a>
-
-
-=======
             <a href="https://kiaram2249.github.io/Garden-freedom-project/mainmenu.html">Preview of the Project</a> <br>
-            
->>>>>>> fa655e57d248b2bc736b99c7d2663e5536f43552
+
             <a href="https://github.com/kiaram2249/Garden-freedom-project"> Link of the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
