--- a/projects/movie-project.html
+++ b/projects/movie-project.html
@@ -18,7 +18,16 @@
 <body>
 
     <!-- Navbar -->
+<style>
+        p {
+  color: black;
+}
 
+h1{
+    color: black;
+}
+
+</style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand owner-name" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,13 +53,13 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Movie Project! (About the UnTold Flower Girl)</h1>
-          <p>Some contexts, me and my partner Joe, had to do this movie project today. And we had to make do a movie project together but we didn't talk much but we were still able to work it out together to solve and find out our parts and what to do in the project. We had some back and fowards about what we are going to do but eventually we made it though. We were very ainti-social to each other but we can still communicate but not at all, i would say barely in my opinion. We don't talk much and we had some challenges like who is going to do the images, the divs and spans and the whole story. But then at the end, we all find something that we have to do even if you don't want to do it, got to make it work for the team and having a good grade for your GPA!!!! We had some arugements back and forward also due to communication because he keeps correcting my stories whenever i try to make the story and then all the sudden, he would make changes without you even knowing and you won't really get credit for anything. Which I can't blame him but I know that I make mistakes and you can tell me and I can fix it. </p>
-            <p> We have tried to come up a story together and we did spin a wheel of genres to see what we can do because we clearly had no idea what to do and we need ideas really quick. And we also basically have tried to make it orginial idea because we didn't want to copy off the ideas that some people had so then we came up with the story together. We did a mystersey movie page and abput this little girl that was giving out flowers, and has suddening just disappered one day and there were people looking for this girl. So they send out a team to look for her but then they found something that's more interesting and questionable.</p>
-          <p> But I am still hoping to do something like this in the furture, and having to improve my communication skills so then it can help me and my team to understand each other more.</p>
+            <h1 class="black">Movie Project! (About the UnTold Flower Girl)</h1>
+          <p class="black">Some contexts, me and my partner Joe, had to do this movie project today. And we had to make do a movie project together but we didn't talk much but we were still able to work it out together to solve and find out our parts and what to do in the project. We had some back and fowards about what we are going to do but eventually we made it though. We were very ainti-social to each other but we can still communicate but not at all, i would say barely in my opinion. We don't talk much and we had some challenges like who is going to do the images, the divs and spans and the whole story. But then at the end, we all find something that we have to do even if you don't want to do it, got to make it work for the team and having a good grade for your GPA!!!! We had some arugements back and forward also due to communication because he keeps correcting my stories whenever i try to make the story and then all the sudden, he would make changes without you even knowing and you won't really get credit for anything. Which I can't blame him but I know that I make mistakes and you can tell me and I can fix it. </p>
+            <p class="black"> We have tried to come up a story together and we did spin a wheel of genres to see what we can do because we clearly had no idea what to do and we need ideas really quick. And we also basically have tried to make it orginial idea because we didn't want to copy off the ideas that some people had so then we came up with the story together. We did a mystersey movie page and abput this little girl that was giving out flowers, and has suddening just disappered one day and there were people looking for this girl. So they send out a team to look for her but then they found something that's more interesting and questionable.</p>
+          <p class="black"> But I am still hoping to do something like this in the furture, and having to improve my communication skills so then it can help me and my team to understand each other more.</p>
             <a href="https://movie-webpage.joez5.repl.co/">Preview Of the Project</a><br>
            <a href="https://replit.com/@joez5/movie-webpage#index.html">Behind of the Scenes of the Coding!(Code of the Project)</a><br>
-           
+
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
             <!--EXAMPLE OF GITHUB LINK-->
