--- a/projects/sep-10-fp.html
+++ b/projects/sep-10-fp.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" /> 
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" />
     <link rel="stylesheet" href="../style.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -18,6 +18,17 @@
 <body>
 
     <!-- Navbar -->
+
+    <style>
+        p {
+  color: black;
+}
+
+h1{
+    color: black;
+}
+
+</style>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand owner-name" href="#"></a>
@@ -44,9 +55,9 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Cooking Gadgets</h1>
-            <p>This project was about what I started from the start and of what I have learned and used the whole year to help me, as well of software and hardware of cooking gadgets.</p>
-            <p>My friend also have helped me when I was in a middle of problem and they helped me since day 1.</p>
+            <h1 class="black">Cooking Gadgets</h1>
+            <p class="black">This project was about what I started from the start and of what I have learned and used the whole year to help me, as well of software and hardware of cooking gadgets.</p>
+            <p class="black">My friend also have helped me when I was in a middle of problem and they helped me since day 1.</p>
             <a href="https://caronv3030.github.io/sep10-freedom-project/#!">My Cooking Gadget Website</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
