--- a/projects/sep11-fp.html
+++ b/projects/sep11-fp.html
@@ -55,7 +55,7 @@ h1{
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="black">Garden Project</h1>
+            <h1 class="black"> My SEP11 Freedom Project</h1>
             <p class="black"> This is my Freedom Project that I had started ever since the beginning of the school year. I had used my tool, Kaboom and have always errors and challenges that I had to face. </p>
 
             <p class="black">This project was designed from me, Kiara, and Robert. We all combined what we liked and formed it into one single idea! Which turned out we wanted to do something with plants and can be turned into gardening because there are fruits and we connected with bugs because there are always bugs in the trees of where the fruit is!</p>
