--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                <div class="col-sm-4">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="card-title">My Garden Project Game</h5>
+                                        <h5 class="card-title">SEP11 Freedom Project</h5>
                                         <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
                                         <p class="card-text">I learned how to use my tool Kaboom ever since the beginning of the school year and I had worked collbarting with my friends Robert and Kiara on this game!</p>
                                         <a href="projects/sep11-fp.html" class="card-link">More</a>
